# reflex

./: .gitignore  Cargo.toml  README.md
reflex/: Cargo.toml  README.md
reflex/src/: lib.rs  mailbox.rs  msg_union.rs
reflex/src/internal/: actor_guard_deref.rs  actor_guard_impl.rs  create.rs  dispatch.rs  mod.rs  queue.rs  supervise.rs
reflex/src/internal/test/: mod.rs
reflex/src/mailbox/: generic.rs  mod.rs  ownership.rs
reflex/src/manage/: mod.rs
reflex/src/util/: drop_signal.rs
src/: msg_union.rs
src/internal/: create.rs  dispatch.rs  mod.rs
src/internal/test/: mod.rs
src/mailbox/: generic.rs  mod.rs
src/util/: drop_signal.rs  mod.rs
