[package]
name = "reflex"
version = "0.1.0"
authors = ["Phoenix Kahlo <kahlo.phoenix@gmail.com>"]
edition = "2018"
description = "Actors, simple and fast."
readme = "README.md"

[features]
default = ["failure-interop"]

failure-interop = ["failure"]

[dependencies]
# TODO: change dependencies to be good before release
log = "0.4.8"
futures = "0.1.28"
atomic = "0.4.5"
smallvec = "0.6.10"

failure = { version = "0.1.5", optional = true }

[dev-dependencies]
tokio = "0.1.22"
pretty_env_logger = "0.3.1"
